
        CHANGES IN spatstat.explore VERSION 2.999-999.001

OVERVIEW

    o New package

    o Fixing cross-references in help files

    o Package will be initialised at version 3.0-0.
      Versions less than 3 are developmental.

    o Periodic edge correction for K function.

    o Minor improvements.
    
SIGNIFICANT USER-VISIBLE CHANGES

    o Package structure
    The package 'spatstat.core' has been split into two packages called
    'spatstat.explore' (for exploratory data analysis)
    and 'spatstat.model' (for modelling and formal inference).

    o spatstat.explore
    The new package 'spatstat.explore' contains the code for
    exploratory data analysis and nonparametric analysis
    of spatial data. Examples include 'density.ppp', 'Kest',
    'envelope', 'rhohat', 'clarkevans.test'.

    o NEWS
    The NEWS file for the new package 'spatstat.explore'
    contains older news items from the defunct package 'spatstat.core'
    (for functions which are now in 'spatstat.explore').

    o Kest, Kdot, Kcross, Ldot, Lcross, Kmulti
    These functions now accept the option 'correction="periodic"'
    to compute the periodic (torus) edge correction estimate.

    o markcorr, markcrosscorr
    These functions now allow negative mark values when normalise=FALSE.
    
    
   
        CHANGES IN spatstat.core VERSION 2.4-4.010

OVERVIEW

    o Internal improvements.


        CHANGES IN spatstat.core VERSION 2.4-4

OVERVIEW

    o Bug fixes and minor improvements.

BUG FIXES

    o rhohat.ppp
    The argument 'subset' was not handled correctly in the internal data.
    The estimated function 'rho' was correct, but if 'predict.rhohat' was applied,
    predictions were computed only in the 'subset', and were possibly incorrect values.
    Fixed.

    o Gfox, Jfox
    Warnings were issued about text formatting errors (mentioning 'sprintf' or 'fmt').
    Fixed.
    
        CHANGES IN spatstat.core VERSION 2.4-3

OVERVIEW

    o We thank Art Stock for contributions.