@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 2.999-999.001
-Date: 2022-06-08
+Version: 2.999-999.002
+Date: 2022-06-09
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
