@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-06-08" "2.999-999.001" 224 500 0 30385 6183
+"2022-06-09" "2.999-999.002" 224 500 0 30387 6183
